feat: Implement PWA features and enhance application structure
- Add .vercelignore to exclude unnecessary files from deployment
- Update index.html with PWA meta tags and service worker registration script
- Create vercel-simple.json for simplified routing configuration
- Modify vercel.json to remove unused headers and functions
- Add browserconfig.xml for Windows tile support
- Enhance manifest.json with additional icons and shortcuts for better PWA experience
- Implement service worker (sw.js) for caching and offline functionality
- Introduce PWAInstaller and PWANotifications components for user prompts and notifications
- Add usePWA hook to manage PWA state and installation logic
- Create Guide and HomeNew pages for improved user onboarding and navigation

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -7,6 +7,8 @@
   "background_color": "#ffffff",
   "theme_color": "#0d9488",
   "orientation": "portrait-primary",
+  "scope": "/",
+  "id": "eboo-gest-pwa",
   "icons": [
     {
       "src": "/logo-ebo-gest.png",
@@ -16,11 +18,86 @@
     },
     {
       "src": "/logo-ebo-gest.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/logo-ebo-gest.png",
       "sizes": "180x180",
+      "type": "image/png"
+    },
+    {
+      "src": "/logo-ebo-gest.png",
+      "sizes": "144x144",
+      "type": "image/png"
+    },
+    {
+      "src": "/logo-ebo-gest.png",
+      "sizes": "96x96",
+      "type": "image/png"
+    },
+    {
+      "src": "/logo-ebo-gest.png",
+      "sizes": "72x72",
+      "type": "image/png"
+    },
+    {
+      "src": "/logo-ebo-gest.png",
+      "sizes": "48x48",
       "type": "image/png"
     }
   ],
   "categories": ["business", "productivity", "finance"],
   "lang": "fr",
-  "dir": "ltr"
+  "dir": "ltr",
+  "prefer_related_applications": false,
+  "related_applications": [],
+  "screenshots": [
+    {
+      "src": "/logo-ebo-gest.png",
+      "sizes": "1280x720",
+      "type": "image/png",
+      "form_factor": "wide",
+      "label": "Ebo'o Gest Dashboard"
+    }
+  ],
+  "shortcuts": [
+    {
+      "name": "Tableau de bord",
+      "short_name": "Dashboard",
+      "description": "Accéder au tableau de bord",
+      "url": "/dashboard",
+      "icons": [
+        {
+          "src": "/logo-ebo-gest.png",
+          "sizes": "96x96"
+        }
+      ]
+    },
+    {
+      "name": "Ventes",
+      "short_name": "Ventes",
+      "description": "Gérer les ventes",
+      "url": "/ventes",
+      "icons": [
+        {
+          "src": "/logo-ebo-gest.png",
+          "sizes": "96x96"
+        }
+      ]
+    },
+    {
+      "name": "Stock",
+      "short_name": "Stock",
+      "description": "Gérer le stock",
+      "url": "/stock",
+      "icons": [
+        {
+          "src": "/logo-ebo-gest.png",
+          "sizes": "96x96"
+        }
+      ]
+    }
+  ]
 }
