--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,18 @@
 {
+  "headers": [
+    {
+      "source": "/assets/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
+    }
+  ],
   "rewrites": [
     {
-      "source": "/(.*)",
+      "source": "/((?!assets|favicon.ico|manifest.json|logo-ebo-gest.png|robots.txt|sitemap.xml|sw.js|browserconfig.xml|_redirects).*)",
       "destination": "/index.html"
     }
   ]
