feat: Améliorations d'expérience utilisateur complètes
✨ Nouvelles fonctionnalités:
- Tutoriels interactifs avec onboarding guidé
- Thèmes personnalisés adaptés à la marque
- Raccourcis clavier pour navigation rapide
- Mode multi-utilisateur avec plusieurs caisses simultanées

🎯 Améliorations UX:
- Interface adaptée par type d'activité
- Mode sombre/clair avec persistance
- Système de permissions avancé
- Tableaux de bord spécifiques par activité

🔧 Corrections:
- Page inventaire 404 corrigée
- Accès propriétaire sans PIN pour la caisse
- Catégories de produits par activité
- Navigation entre activités verrouillée
- Inscription employés simplifiée (sans email obligatoire)
- Données de simulation supprimées

📱 Composants ajoutés:
- InteractiveTutorial & TutorialLauncher
- KeyboardShortcutsModal & useKeyboardShortcuts
- ThemeContext & UserExperienceSettings
- MultiUserContext & CashRegisterSelector
- ProductManager avec catégories spécifiques
- ActivitySpecificDashboard
- Système de permissions complet

🚀 L'application dispose maintenant d'une expérience utilisateur de niveau professionnel !

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -98,6 +98,42 @@
           "sizes": "96x96"
         }
       ]
+    },
+    {
+      "name": "Graphiques Temps Réel",
+      "short_name": "Graphiques",
+      "description": "Analyses en temps réel",
+      "url": "/dashboard?view=charts",
+      "icons": [
+        {
+          "src": "/logo-ebo-gest.png",
+          "sizes": "96x96"
+        }
+      ]
+    },
+    {
+      "name": "Alertes Intelligentes",
+      "short_name": "Alertes",
+      "description": "Notifications et alertes",
+      "url": "/dashboard?view=alerts",
+      "icons": [
+        {
+          "src": "/logo-ebo-gest.png",
+          "sizes": "96x96"
+        }
+      ]
     }
-  ]
+  ],
+  "protocol_handlers": [
+    {
+      "protocol": "web+ebogest",
+      "url": "/?action=%s"
+    }
+  ],
+  "edge_side_panel": {
+    "preferred_width": 400
+  },
+  "launch_handler": {
+    "client_mode": "navigate-existing"
+  }
 }
