--- a/package.json
+++ b/package.json
@@ -1,14 +1,39 @@
 {
-  "name": "vite_react_shadcn_ts",
+  "name": "ebo-gest",
   "private": true,
-  "version": "0.0.0",
+  "version": "2.0.0",
   "type": "module",
+  "description": "Solution de gestion complète et moderne pour restaurants, snacks, bars, cafés et commerces au Cameroun et en Afrique",
+  "keywords": [
+    "pos",
+    "restaurant",
+    "bar",
+    "cafe",
+    "gestion",
+    "pme",
+    "cameroun",
+    "afrique",
+    "firebase",
+    "react",
+    "typescript"
+  ],
+  "author": "Ebo'o Gest Team",
+  "license": "MIT",
+  "homepage": "https://eboo-gest.vercel.app",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/votre-org/ebo-pos-hub.git"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "lint:fix": "eslint . --fix",
+    "type-check": "tsc --noEmit",
+    "preview": "vite preview",
+    "format": "prettier --write .",
+    "format:check": "prettier --check ."
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -83,10 +108,13 @@
     "@vitejs/plugin-react-swc": "^3.7.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.32.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^15.15.0",
     "postcss": "^8.5.6",
+    "prettier": "^3.3.3",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.38.0",
